fix: unit tests
Signed-off-by: Aaron <29749331+aarnphm@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.pytest.ini_options]
-addopts = ["-rfEX", "-pno:warnings", "-vv"]
+addopts = ["-rfEX", "-pno:warnings"]
 python_files = ["test_*.py", "*_test.py"]
 testpaths = ["tests"]
 
