--- a/bentofile.yaml
+++ b/bentofile.yaml
@@ -1,8 +1,8 @@
 service: 'service.py:svc'
-name: pneumonia-classifier
+name: pneumonia-detection-demo
 labels:
   owner: bentoml-team
-  project: pneumonia-classifier
+  project: pneumonia-detection-demo
 include:
   - '*.py'
   - '/tests'
